# Broken-Divinity---Bevy

./: CHANGELOG.md  Cargo.toml  HANDOFF-2026-05-28-1931.md  HANDOFF-2026-05-29-1206.md  HANDOFF-2026-05-30-1503.md  PHASE-SHEET-2026-05-29.md  PLAN-2026-05-26-ALPHA-READINESS.md
.mex/: ROUTER.md
docs/tech/: ADR-2026-05-28-UNIFIED-UI-MIGRATION-SEAMS.md  AXT-00-RISK-REGISTER-2026-05-26.md  AXT-08-ALPHA-READINESS-REPORT-2026-05-26.md  GIT-BRANCHING-POLICY-2026-05-28.md  HANDOFF-2026-05-26-AXT-SESSION.md  PHASE-0-CLEANUP-BASELINE-2026-05-29.md  PHASE-0-FULL-SCOPE-BASELINE-2026-05-29.md  PLAN-2026-05-27-ALPHA-RECOVERY-EXECUTION.md  PLAN-2026-05-28-UNIFIED-UI-FULL-MIGRATION-DEV-SWAP.md  PLAN-2026-05-28-UNIFIED-UI-INTEGRATION.md  RCV-00-RECOVERY-DECISION-LOG-2026-05-26.md  RCV-04-RECOVERY-VALIDATION-PACK-2026-05-26.md  RCV-06-POLICY-OWNER-MAPPING-2026-05-26.md  RCV-07-UX-BASELINE-HARNESS-2026-05-26.md  RELEASE-NOTES-2026-05-27-ALPHA-RECOVERY.md  UNIFIED-UI-DIVERGENCE-LEDGER.md  UX-VISUAL-CONTRACT-2026-05-28.md  alpha-playtest-battery-2026-05-26.md
metrics/: AXT-00-full-gate-output-2026-05-26.txt  AXT-00-scorecard-2026-05-26.md
metrics/templates/: alpha-scorecard-template.md
src/: alpha_battery.rs  alpha_signoff.rs  lib.rs  main.rs  recovery.rs  runtime_app.rs  runtime_flow.rs  tests.rs
src/core/: abilities.rs  brp_safety.rs  camera.rs  components.rs  config.rs  escape.rs  fov.rs  gamelog.rs  inventory.rs  items.rs  mod.rs  movement.rs  perk_catalog.rs  perks.rs  player.rs  qa_profile.rs  resources.rs  sanity.rs  save.rs  save_recap.rs  save_runtime.rs  state.rs  stats.rs  status.rs  tilemap.rs  turn.rs  turn_runtime.rs
src/game/: combat.rs  factions.rs  mod.rs
src/ui/: colony_panel.rs  copy_catalog.rs  gabriel_dialogue_panel.rs  gamelog_panel.rs  gameover.rs  help_panel.rs  hud.rs  input_hints.rs  inventory_panel.rs  inventory_rules.rs  journal_panel.rs  menu.rs  mod.rs  modal_priority.rs  objective_prompt.rs  primary_cta.rs  (+17 more)
tests/: axt01_instruction_hierarchy.rs  axt02_escape_semantics.rs  axt03_primary_cta.rs  axt04a_copy_compression.rs  axt04b_feedback_semantics.rs  axt05_save_recap_matrix.rs  axt06_qa_observability.rs  axt07_alpha_battery.rs  axt08_alpha_signoff.rs  cleanup_boundary_contracts.rs  menu_runtime_contracts.rs  phase_sheet_contracts.rs  policy_owner_contracts.rs  rcv_compile_contract.rs  recovery_surface_contracts.rs  runtime_app_integration.rs  runtime_flow_contracts.rs  ui_inventory_phase4_contracts.rs  ui_migration_phase0_contracts.rs  ui_phase3_interaction_contracts.rs  ui_phase5_runtime_contracts.rs  ui_runtime_style_adapter_phase2.rs  ui_shell_layout_phase3.rs  ui_style_contract_phase1.rs  ux_baseline_red_harness.rs
(+54 files in other folders)
