[package]
name = "broken_divinity"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["2d"] }
bevy_ecs_tilemap = "0.18.1"
bevy_egui = "0.39.1"
rand = "0.10.0"
rand_chacha = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
